<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Login_actionlogin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/background_login"
        android:id="@+id/imageView3" />

    <TextView

        android:id="@+id/selamat_datang"
        fontPath="fonts/Poppins-Bold.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ayo_masuk"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/selamat_datang"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="fonts/Poppins-Bold.otf"
        tools:ignore="MissingPrefix"
        android:textSize="14dp"
        android:textStyle="bold"
        android:id="@+id/ayo_masuk"
        android:textColor="@color/grey"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/ayo_login"
        android:layout_above="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/sign_in_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:text="@string/google_name"
        app:isDarkTheme="true"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    </RelativeLayout>