<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <TextView
        android:id="@+id/panduanmasukk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17dp"
        android:text="Panduan Masuk Dengan Akun Google" />

    <TextView
        android:id="@+id/panduan5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:text="@string/panduan5"
        android:layout_below="@id/panduanmasukk"
        android:inputType="textMultiLine"/>

        <ImageView
            android:id="@+id/homepanduan5"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:src="@drawable/panduan5"
            android:scaleType="fitXY"
            android:layout_below="@id/panduan5" />

    <TextView
        android:id="@+id/panduan6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:text="@string/panduan6"
        android:layout_below="@id/homepanduan5"
        android:inputType="textMultiLine"/>

    <ImageView
        android:id="@+id/homepanduan6"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:src="@drawable/panduan6"
        android:scaleType="fitXY"
        android:layout_below="@id/panduan6"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/panduan7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:text="@string/panduan7"
        android:layout_below="@id/homepanduan6"
        android:inputType="textMultiLine"/>

    <ImageView
        android:id="@+id/homepanduan7"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:src="@drawable/panduan7"
        android:scaleType="fitXY"
        android:layout_below="@id/panduan7"
        android:layout_marginBottom="5dp"/>



</RelativeLayout>
</ScrollView>
</RelativeLayout>
